# alpaca.cpp

./: CMakeLists.txt  chat.cpp  lib.cpp  lib.h
android/: .gitignore
android/app/: build.gradle
android/app/src/androidTest/java/org/alpaca/test/: ApplicationTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: unigram_20k.txt
android/app/src/main/java/org/alpaca/test/: ChatAdapter.java  ChatItem.java  Const.java  MainActivity.java  NativeUtils.java
android/app/src/main/jni/: CMakeLists.txt  Logger.h  org_alpaca_test_NativeUtils.cpp  org_alpaca_test_NativeUtils.h
android/app/src/main/res/layout/: activity_main.xml  chat_item.xml
android/app/src/test/java/org/alpaca/test/: ExampleUnitTest.java
